[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Sounds/untitled.wav" type="AudioStream" id=2]
[ext_resource path="res://Scenes/FishingPole.tscn" type="PackedScene" id=3]
[ext_resource path="res://Shaders/wobble.shader" type="Shader" id=4]
[ext_resource path="res://Sounds/cast.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="CapsuleMesh" id=4]
radius = 0.25
mid_height = 0.5
radial_segments = 8
rings = 4

[sub_resource type="ShaderMaterial" id=13]
shader = ExtResource( 4 )
shader_param/albedo = Color( 0.376471, 0.556863, 0.768627, 1 )
shader_param/clamp_diffuse_to_max = false
shader_param/cuts = 1
shader_param/wrap = 0.0
shader_param/steepness = 1.0
shader_param/use_attenuation = true
shader_param/use_specular = false
shader_param/specular_strength = 1.0
shader_param/specular_shininess = 16.0
shader_param/use_rim = false
shader_param/rim_width = 8.0
shader_param/rim_color = Color( 1, 1, 1, 1 )
shader_param/use_ramp = false
shader_param/use_borders = false
shader_param/border_width = 0.01
shader_param/amount = 0.02
shader_param/speed = 2.0
shader_param/frequency = 2.0

[sub_resource type="SphereMesh" id=5]
radius = 0.25
height = 0.5
radial_segments = 8
rings = 4

[sub_resource type="ShaderMaterial" id=14]
shader = ExtResource( 4 )
shader_param/albedo = Color( 0.611765, 0.462745, 0.541176, 1 )
shader_param/clamp_diffuse_to_max = false
shader_param/cuts = 1
shader_param/wrap = 0.0
shader_param/steepness = 1.0
shader_param/use_attenuation = true
shader_param/use_specular = false
shader_param/specular_strength = 1.0
shader_param/specular_shininess = 16.0
shader_param/use_rim = false
shader_param/rim_width = 8.0
shader_param/rim_color = Color( 1, 1, 1, 1 )
shader_param/use_ramp = false
shader_param/use_borders = false
shader_param/border_width = 0.01
shader_param/amount = 0.02
shader_param/speed = 2.0
shader_param/frequency = 2.0

[sub_resource type="CylinderMesh" id=6]
top_radius = 0.25
bottom_radius = 0.4
height = 0.25
radial_segments = 8
rings = 0

[sub_resource type="ShaderMaterial" id=15]
shader = ExtResource( 4 )
shader_param/albedo = Color( 0.682353, 0.647059, 0.443137, 1 )
shader_param/clamp_diffuse_to_max = false
shader_param/cuts = 1
shader_param/wrap = 0.0
shader_param/steepness = 1.0
shader_param/use_attenuation = true
shader_param/use_specular = false
shader_param/specular_strength = 1.0
shader_param/specular_shininess = 16.0
shader_param/use_rim = false
shader_param/rim_width = 8.0
shader_param/rim_color = Color( 1, 1, 1, 1 )
shader_param/use_ramp = false
shader_param/use_borders = false
shader_param/border_width = 0.01
shader_param/amount = 0.02
shader_param/speed = 2.0
shader_param/frequency = 2.0

[sub_resource type="SphereMesh" id=3]
radius = 0.1
height = 0.2
radial_segments = 8
rings = 4

[sub_resource type="ShaderMaterial" id=16]
shader = ExtResource( 4 )
shader_param/albedo = Color( 0.133333, 0.133333, 0.133333, 1 )
shader_param/clamp_diffuse_to_max = false
shader_param/cuts = 1
shader_param/wrap = 0.0
shader_param/steepness = 1.0
shader_param/use_attenuation = true
shader_param/use_specular = false
shader_param/specular_strength = 1.0
shader_param/specular_shininess = 16.0
shader_param/use_rim = false
shader_param/rim_width = 8.0
shader_param/rim_color = Color( 1, 1, 1, 1 )
shader_param/use_ramp = false
shader_param/use_borders = false
shader_param/border_width = 0.01
shader_param/amount = 0.02
shader_param/speed = 2.0
shader_param/frequency = 2.0

[sub_resource type="ShaderMaterial" id=17]
shader = ExtResource( 4 )
shader_param/albedo = Color( 0.133333, 0.133333, 0.133333, 1 )
shader_param/clamp_diffuse_to_max = false
shader_param/cuts = 1
shader_param/wrap = 0.0
shader_param/steepness = 1.0
shader_param/use_attenuation = true
shader_param/use_specular = false
shader_param/specular_strength = 1.0
shader_param/specular_shininess = 16.0
shader_param/use_rim = false
shader_param/rim_width = 8.0
shader_param/rim_color = Color( 1, 1, 1, 1 )
shader_param/use_ramp = false
shader_param/use_borders = false
shader_param/border_width = 0.01
shader_param/amount = 0.02
shader_param/speed = 2.0
shader_param/frequency = 2.0

[sub_resource type="Animation" id=9]
resource_name = "Cast"
tracks/0/type = "value"
tracks/0/path = NodePath("Hand:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 2, -2, 0.5 ),
"update": 0,
"values": [ Vector3( 15, 0, 0 ), Vector3( 30, 0, 0 ), Vector3( -60, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CastPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Hand:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 15, 0, 0 ), Vector3( 15, 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Hand:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CastPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "Retract"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Hand:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 2, 0.5 ),
"update": 0,
"values": [ Vector3( -60, 0, 0 ), Vector3( 15, 0, 0 ) ]
}

[sub_resource type="SpatialMaterial" id=11]
flags_unshaded = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id=12]
material = SubResource( 11 )
size = Vector2( 0.1, 0.1 )

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 1 )

[node name="Body" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 13 )

[node name="Head" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 14 )

[node name="Hat" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0 )
mesh = SubResource( 6 )
material/0 = SubResource( 15 )

[node name="ArmBase" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="SpringArm" type="Spatial" parent="ArmBase"]
transform = Transform( 1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0 )

[node name="Camera" type="Camera" parent="ArmBase/SpringArm"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8 )

[node name="RightRay" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0.2, -0.33 )
enabled = true
cast_to = Vector3( 0, -0.4, 0 )

[node name="RightFoot" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 16 )

[node name="LeftRay" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0.2, -0.33 )
enabled = true
cast_to = Vector3( 0, -0.4, 0 )

[node name="LeftFoot" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 17 )

[node name="WalkPoint" type="Position3D" parent="."]

[node name="Hand" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, 0 )

[node name="FishingPole" parent="Hand" instance=ExtResource( 3 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/Cast = SubResource( 9 )
anims/Idle = SubResource( 7 )
anims/RESET = SubResource( 8 )
anims/Retract = SubResource( 10 )

[node name="WalkTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
one_shot = true

[node name="CastPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -24.0

[node name="Walk" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -24.0

[node name="WalkParticles" type="CPUParticles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.33 )
emitting = false
lifetime = 0.25
explosiveness = 1.0
mesh = SubResource( 12 )
direction = Vector3( 1, 1, 0 )
initial_velocity = 2.0

[connection signal="hooked" from="Hand/FishingPole" to="." method="_on_FishingPole_hooked"]
